# serializer version: 1
# name: test_binary_sensors[binary_sensor.12_111111111111_sensed_a-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.12_111111111111_sensed_a',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Sensed A',
    'platform': 'onewire',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'sensed_id',
    'unique_id': '/12.111111111111/sensed.A',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[binary_sensor.12_111111111111_sensed_a-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_file': '/12.111111111111/sensed.A',
      'friendly_name': '12.111111111111 Sensed A',
      'raw_value': 1.0,
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.12_111111111111_sensed_a',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensors[binary_sensor.12_111111111111_sensed_b-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.12_111111111111_sensed_b',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Sensed B',
    'platform': 'onewire',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'sensed_id',
    'unique_id': '/12.111111111111/sensed.B',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[binary_sensor.12_111111111111_sensed_b-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_file': '/12.111111111111/sensed.B',
      'friendly_name': '12.111111111111 Sensed B',
      'raw_value': 0.0,
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.12_111111111111_sensed_b',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensors[binary_sensor.29_111111111111_sensed_0-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.29_111111111111_sensed_0',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Sensed 0',
    'platform': 'onewire',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'sensed_id',
    'unique_id': '/29.111111111111/sensed.0',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[binary_sensor.29_111111111111_sensed_0-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_file': '/29.111111111111/sensed.0',
      'friendly_name': '29.111111111111 Sensed 0',
      'raw_value': 1.0,
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.29_111111111111_sensed_0',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensors[binary_sensor.29_111111111111_sensed_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.29_111111111111_sensed_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Sensed 1',
    'platform': 'onewire',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'sensed_id',
    'unique_id': '/29.111111111111/sensed.1',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[binary_sensor.29_111111111111_sensed_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_file': '/29.111111111111/sensed.1',
      'friendly_name': '29.111111111111 Sensed 1',
      'raw_value': 0.0,
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.29_111111111111_sensed_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensors[binary_sensor.29_111111111111_sensed_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.29_111111111111_sensed_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Sensed 2',
    'platform': 'onewire',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'sensed_id',
    'unique_id': '/29.111111111111/sensed.2',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[binary_sensor.29_111111111111_sensed_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_file': '/29.111111111111/sensed.2',
      'friendly_name': '29.111111111111 Sensed 2',
      'raw_value': 0.0,
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.29_111111111111_sensed_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensors[binary_sensor.29_111111111111_sensed_3-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.29_111111111111_sensed_3',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Sensed 3',
    'platform': 'onewire',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'sensed_id',
    'unique_id': '/29.111111111111/sensed.3',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[binary_sensor.29_111111111111_sensed_3-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_file': '/29.111111111111/sensed.3',
      'friendly_name': '29.111111111111 Sensed 3',
      'raw_value': None,
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.29_111111111111_sensed_3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_binary_sensors[binary_sensor.29_111111111111_sensed_4-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.29_111111111111_sensed_4',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Sensed 4',
    'platform': 'onewire',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'sensed_id',
    'unique_id': '/29.111111111111/sensed.4',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[binary_sensor.29_111111111111_sensed_4-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_file': '/29.111111111111/sensed.4',
      'friendly_name': '29.111111111111 Sensed 4',
      'raw_value': 0.0,
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.29_111111111111_sensed_4',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensors[binary_sensor.29_111111111111_sensed_5-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.29_111111111111_sensed_5',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Sensed 5',
    'platform': 'onewire',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'sensed_id',
    'unique_id': '/29.111111111111/sensed.5',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[binary_sensor.29_111111111111_sensed_5-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_file': '/29.111111111111/sensed.5',
      'friendly_name': '29.111111111111 Sensed 5',
      'raw_value': 0.0,
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.29_111111111111_sensed_5',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensors[binary_sensor.29_111111111111_sensed_6-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.29_111111111111_sensed_6',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Sensed 6',
    'platform': 'onewire',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'sensed_id',
    'unique_id': '/29.111111111111/sensed.6',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[binary_sensor.29_111111111111_sensed_6-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_file': '/29.111111111111/sensed.6',
      'friendly_name': '29.111111111111 Sensed 6',
      'raw_value': 0.0,
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.29_111111111111_sensed_6',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensors[binary_sensor.29_111111111111_sensed_7-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.29_111111111111_sensed_7',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Sensed 7',
    'platform': 'onewire',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'sensed_id',
    'unique_id': '/29.111111111111/sensed.7',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[binary_sensor.29_111111111111_sensed_7-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_file': '/29.111111111111/sensed.7',
      'friendly_name': '29.111111111111 Sensed 7',
      'raw_value': 0.0,
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.29_111111111111_sensed_7',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensors[binary_sensor.3a_111111111111_sensed_a-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.3a_111111111111_sensed_a',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Sensed A',
    'platform': 'onewire',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'sensed_id',
    'unique_id': '/3A.111111111111/sensed.A',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[binary_sensor.3a_111111111111_sensed_a-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_file': '/3A.111111111111/sensed.A',
      'friendly_name': '3A.111111111111 Sensed A',
      'raw_value': 1.0,
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.3a_111111111111_sensed_a',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensors[binary_sensor.3a_111111111111_sensed_b-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.3a_111111111111_sensed_b',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Sensed B',
    'platform': 'onewire',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'sensed_id',
    'unique_id': '/3A.111111111111/sensed.B',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[binary_sensor.3a_111111111111_sensed_b-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_file': '/3A.111111111111/sensed.B',
      'friendly_name': '3A.111111111111 Sensed B',
      'raw_value': 0.0,
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.3a_111111111111_sensed_b',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensors[binary_sensor.ef_111111111113_hub_short_on_branch_0-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.ef_111111111113_hub_short_on_branch_0',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Hub short on branch 0',
    'platform': 'onewire',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'hub_short_id',
    'unique_id': '/EF.111111111113/hub/short.0',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[binary_sensor.ef_111111111113_hub_short_on_branch_0-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'device_file': '/EF.111111111113/hub/short.0',
      'friendly_name': 'EF.111111111113 Hub short on branch 0',
      'raw_value': 1.0,
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.ef_111111111113_hub_short_on_branch_0',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensors[binary_sensor.ef_111111111113_hub_short_on_branch_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.ef_111111111113_hub_short_on_branch_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Hub short on branch 1',
    'platform': 'onewire',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'hub_short_id',
    'unique_id': '/EF.111111111113/hub/short.1',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[binary_sensor.ef_111111111113_hub_short_on_branch_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'device_file': '/EF.111111111113/hub/short.1',
      'friendly_name': 'EF.111111111113 Hub short on branch 1',
      'raw_value': 0.0,
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.ef_111111111113_hub_short_on_branch_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensors[binary_sensor.ef_111111111113_hub_short_on_branch_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.ef_111111111113_hub_short_on_branch_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Hub short on branch 2',
    'platform': 'onewire',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'hub_short_id',
    'unique_id': '/EF.111111111113/hub/short.2',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[binary_sensor.ef_111111111113_hub_short_on_branch_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'device_file': '/EF.111111111113/hub/short.2',
      'friendly_name': 'EF.111111111113 Hub short on branch 2',
      'raw_value': 1.0,
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.ef_111111111113_hub_short_on_branch_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensors[binary_sensor.ef_111111111113_hub_short_on_branch_3-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.ef_111111111113_hub_short_on_branch_3',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Hub short on branch 3',
    'platform': 'onewire',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'hub_short_id',
    'unique_id': '/EF.111111111113/hub/short.3',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[binary_sensor.ef_111111111113_hub_short_on_branch_3-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'device_file': '/EF.111111111113/hub/short.3',
      'friendly_name': 'EF.111111111113 Hub short on branch 3',
      'raw_value': 0.0,
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.ef_111111111113_hub_short_on_branch_3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
